# example_commit_workflow

./: LICENSE  README.md  pyproject.toml
.github/workflows/: cron.yaml
data/: README.md  random.txt
example_commit_workflow/: random_to_file.py
scripts/: random_to_file.py
