[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "example_commit_workflow"
authors = [
    {name = "Hugo MacDermott-Opeskin", email = "hugomacdermott@gmail.com"},
]

license = {file = "LICENSE"}
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
random_to_file = "example_commit_workflow.random_to_file:main"
